main.css
/* ... */
.about-sentence {
  margin: auto;
}
.white-sentence {
  color: #fff;
}
.container {
  background-size: contain;
  margin: 0;
  background-color: #fff;
  min-height: 600px;
  width: 100%;
  color: #EEEEEE;
}
.topnav {
  background-color: #025e70;
  text-align: right;
  padding: 0 30px;
  overflow: hidden;
  position: fixed;
  width: 100%;
  height: 60px;
  font-size: 1.6rem;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  font-weight: 300;
  z-index: 20;
  box-shadow: 1px 12px 15px -11px rgba(0, 0, 0, 0.7);
}
.topnav ul > li {
  display: flex;
  flex-direction: row;
}
.topnav ul.main_ul {
  margin: 0;
  padding: 0;
  display: flex;
}
.topnav ul li {
  display: inline-block;
  position: relative;
  margin: 0 10px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  color: #EEEEEE;
  line-height: 60px;
  transition: 0.3s;
}
.topnav ul li p {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: 0.5rem;
  transition: 0.3s;
  background-color: #AACBD4;
}
.topnav ul li:hover {
  color: #f79256;
}
.topnav ul li:hover p {
  width: 100%;
  background-color: #f79256;
}
.topnav h1, .topnav p {
  float: left;
}
.topnav .icon {
  display: none;
}
.logo {
  float: left;
  line-height: 40px;
  color: #EEEEEE;
  height: 100%;
  cursor: pointer;
  margin-left: 0.5rem;
}
.logo h1 {
  font-family: 'open sans', sans-serif;
  font-weight: 400;
  margin: 0;
  display: block;
  text-align: left;
  font-size: 2rem;
  line-height: 2.5rem;
}
.logo p {
  display: block;
  margin: 0;
  text-transform: uppercase;
  letter-spacing: 0.38rem;
  text-align: left;
  line-height: 1.8rem;
  font-size: 1.4rem;
  padding-left: 0.5rem;
}
.logo {
  text-decoration: none;
  color: #fff;
  display: flex;
  flex-direction: column;
  height: 100%;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
}
.logo img {
  height: 3.5rem;
  margin: 3px 0 0 3px;
}
.atf-container {
  background-image: url(./images/computer-1149148_1920.jpg);
  background-size: cover;
  background-attachment: fixed;
  min-height: 600px;
  width: 100%;
  position: relative;
  display: flex;
}
.atf-container:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}
.main-title {
  margin: auto;
  font-family: 'Quicksand', sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  opacity: 1;
  transform: translate3d(0px, 0px, 0px)
  rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale3d(1, 1, 1);
}
a.call-me-cont {
  width: 20rem;
  height: 20rem;
  background-color: rgba(2, 94, 112, 0.7);
  position: relative;
  z-index: 10;
  border-radius: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  outline: none;
}
.phone-icon {
  width: 5rem;
  height: 5rem;
  margin-bottom: 0.6rem;
}
.main-title .phone-num {
  color: #fff;
  font-size: 3.2rem;
  margin-bottom: 1rem;
}
.main-title p {
  font-size: 2rem;
}
.title-button {
  background-color: rgba(2, 94, 112, 0.8);
  display: flex;
  height: 4.2rem;
  position: relative;
  z-index: 8;
  margin: 3rem 0 1.6rem 0;
  cursor: pointer;
  transition: 0.3s;
}
.title-button:hover {
  background-color: #f79256;
}
.title-button > p {
  margin: auto 3rem;
  color: #fff;
  font-weight: 300;
  font-size: 1.7rem;
  text-transform: uppercase;
}
.main-title > p {
  color: #fff;
  position: relative;
  z-index: 8;
  text-align: center;
}
.main-title > .upper {
  font-weight: 300;
  font-size: 9rem;
}
.main-title > .lower {
  font-size: 3.2rem;
}
.image {
  background-image: url(./images/nonsap-visuals-511403-unsplash.jpg);
  background-size: cover;
  border-radius: 50%;
  width: 260px;
  height: 260px;
  margin: 40px auto;
}
main {
  position: relative;
  z-index: 100;
}
.color-coconut { fill:#9B6534; }
.color-copper { fill:#AA7135; }
.color-pale-taupe { fill:#B9A086; }
.color-dark-vanilla { fill:#D5B99B; }
.color-metallic-sunburst { fill:#A26B34; }
.color-raisin-black { fill:#231F20; }
.color-cg-red { fill:#2C8CB3; }
.color-firebrick { fill:#1179A2; }
.color-vivid-cerulean { fill:#00ABE9; }
.color-vivid-cerulean-2 { fill:#57B9DD; }
.color-azure { fill:#0095FF; }
.color-platinum { fill:#E7E7E7; }
.color-light-gray { fill:#D3D3D8; }
.color-davys-grey { fill:#5A5A5A; }
.color-arsenic { fill:#444444; }
.color-skinny { fill: #F7BB8F; }
.color-paper-blue { fill:#87CED9; }
.color-sky-blue { fill:#4398d1; }
.color-sky-blue-2 { fill:#2C8CB3; }
.color-smoky-blue { fill:#1179A2; }
.color-skinny-light { fill:#FEC9A3; }
.color-cream-white { fill:#EBEBEB; }
.color-choco { fill:#75462E; }
.color-skinny-dark { fill:#F0B184; }
.color-cream-white-2 { fill:#E0E0E0 }
.color-skinny-yellow { fill:#FFD7A3; }
.color-skinny-yellow-2 { fill:#FDC88E; }
.color-coffe-light { fill:#D48F60; }
.color-coffe-light-2 { fill:#E2A071; }
.color-green-light { fill:#49A010; }
.color-green { fill:#3A7F0D; }
.color-yellow { fill:#F9EA80; }
.color-yellow-dark { fill:#FFC107; }
.color-orange-light { fill:#ED8F20; }
.color-yellow-sunny { fill:#F7B563; }
.color-pink-dark { fill:#CC2A59; }
.color-pink-paper { fill:#FC969F; }
.color-yellow-light1 { fill:#EFE7D0; }
.color-yellow-light2 { fill:#FFF5BB; }
.color-brown { fill:#623F33; }
.color-meat-red { fill:#7F2E2B; }
.color-meat-light { fill:#B95150; }
.color-caramel-light { fill:#CA8357; }

.about {
  flex-grow: 7;
  color: #393E46;
}
.about p {
  padding: 10px;
}
.content h2, h3, p {
  text-align: center;
}
i {
  padding-right: 15px;
}
.services {
  min-height: 600px;
  color: #393E46;
  margin: 0 auto;
  background-color: #EAEBED;
}
.check-mark-img {
  height: 2rem;
  width: 2rem;
  margin-right: 2rem;
}
.services-svg-icon {
  width: 8rem;
  height: 8rem;
  margin: 3rem 0;
}
.profits-svg-icon {
  width: 10rem;
  height: 10rem;
  margin-bottom: 3rem;
}
.content-services {
  background-color: #ffffff;
  padding: 1rem;
  box-shadow: 1px 12px 15px -11px rgba(0, 0, 0, 0.51);
}
/* ... */

